2010/08/01 (wololo)
- JJS' patch for syscall estimation. Improves syscall estimation on psp2000 < 6.20, psp3000 < 6.20, and pspGo all firmwares

2010/07/18 (wololo)
- Fix for issue 270 Sound in picodrive (needs to be 44KHz though, check the settings in picodrive!)
- Fix a bug introduced in R94 with libraries unloading. This fixes issues 280 and 283 (goEar and pspkvm)
- Fix for issue 284 (can't save in snes9xTYL). Thanks JJS and SeanC994

I ran the following tests on a pspGo 6.20 with the distrib version:
Doom Runs, can exit, Network found
Wagic Runs with sound, can exit
CSPSP Runs, play exit
GPSP Runs, play NO Exit
Daedalus Runs (slow), play no exit (?)
Picodrive Runs with sound (no mp3 support yet I think) 
FCEUltra Runs, load rom, can exit
ScummVM Runs, loads game, can exit
TOME Starts, can exit
Snes9xTYL Starts (sometimes crash at startup?) play, can exit, can save 
kvm Starts. didn't find a way to quit (except "pause game" feature on the Go)
GoEar Starts, but I can't seem to connect.

2010/07/12 (wololo)
- Added JJS's patch for Static elfs loading. This improves compatibility with some games
- Fixed issue 269 (Exit from Doom crashes)
- override_sceCtrlPeekBufferPositive is now an option in hbl_config.txt, for those who want to take the risk and get more speed in emulators

2010/07/05 (wololo)
- added JJS's patch for network modules. This partially fixes issue 109. Thanks a lot man!
-- see the subject at http://advancedpsp.tk/foro_es/viewtopic.php?f=37&t=784
- removed the code that attempts to delete callbacks. Based on my experiments with psplink, I'm assuming that unloading the patapon module simply unloads the callbacks as well. This fixes issue 45

2010/06/27 (wololo)
- unload utility modules when exiting a homebrew (partially fixes issue 179)

2010/06/25 (wololo)
- Moved the menu outside of HBL, it is now a homebrew so that anybody respecting the API can code their own menu as a "standard" homebrew.